Spacing fixed

--- a/src/components/CourseContent/_CourseContent.scss
+++ b/src/components/CourseContent/_CourseContent.scss
@@ -115,7 +115,7 @@
         font-size: 20px !important;
     }
     .modules{
-        padding: 0em !important;
+        padding: 1em 0em !important;
     }
     .card-body{
         padding: 0.3em !important;
